syntax = "proto3";

package mqtt;

option java_multiple_files = true;
option java_package = "com.grpc.mqtt";
option java_generic_services = true;

service MqttService {
  rpc PublishEdgeCommand (PublishEdgeCommandRequest) returns (PublishEdgeCommandResponse);
}

message PublishEdgeCommandRequest {
  string edge_id = 1;
  string code = 2;
}

message PublishEdgeCommandResponse {
  string error_code = 1;
}
